--- a/source/kv/ForumMainScreen.kv
+++ b/source/kv/ForumMainScreen.kv
@@ -1,36 +1,72 @@
 #: import * mandel_layouts
+<MD3Card>
+    padding: 4
+    size_hint: None, None
+    size: dp(400), dp(100)
+
+    MDRelativeLayout:
+
+        MDIconButton:
+            id: root.uuid
+            icon: "chevron-right"
+            pos_hint: {"top": 1, "right": 1}
+            on_release: root.jump('postPage',[root.uuid])
+
+        MDLabel:
+            id: title
+            text: root.title
+            adaptive_size: True
+            color: "black"
+            pos: dp(5), dp(60)
+            bold: True
+            font_style: 'H6'
+            font_size: 35
+
+        MDLabel:
+            id: content
+            text: root.content
+            adaptive_size: True
+            color: "grey"
+            pos: dp(12), dp(12)
+            bold: True
+            font_style: 'Body1'
+            font_size: 20
+
+
 <ForumMainScreen>:
     name: 'ForumMainScreen'
 
-    canvas.before:
-        Color:
-            rgba: .2,.2,.5,1
-        Rectangle:
-            pos: self.pos
-            size: self.size
+#    canvas.before:
+#        Color:
+#            rgba: .8,.8,.8,1
+#        Rectangle:
+#            pos: self.pos
+#            size: self.size
 
 
+
+    ScrollView:
+        scroll_y: 0.5
+        Column:
+            id: listOfPost
+            adaptive_height: True
+
+            ### An async image widget contains an image
+            ### The image is displayed with specific width and height (300 x 900)
+            AsyncImage:
+                source: 'source/pic/main_hello.jpg'
+                size_hint: None, None
+                size: dp(250), dp(250)
+                canvas:
+                    Color:
+                        rgba: 1,1,1,1
+                    Rectangle:
+                        texture: self.texture
+                        size: self.width, self.height
+                        pos: self.pos
     Column:
         MDTopAppBar:
             id: toolbar
-            left_action_items: [['chevron-left', lambda x: app.go_back()]]
+            left_action_items: [["menu", lambda x: root.callback(x)]]
+            right_action_items: [["magnify", lambda x: root.menu_callback('Search'),'Search','Search']]
 
-    ScrollView:
-        Column:
-            id: container
-            padding: dp(20)
-            spacing: dp(10)
-            adaptive_height: True
-            MDLabel:
-                size_hint_y: None
-                height: dp(25)
-                text: root.author
-            Column:
-                background_color: 1,0,0,.5
-                radius: dp(10)
-                padding: dp(10)
-                adaptive_height: True
-                MDLabel:
-                    text: root.content
-                    size_hint_y: None
-                    size: self.texture_size
