# The main body of the forum has been set up and the first round of bug testing has been completed.

--- a/source/kv/LoginScreen.kv
+++ b/source/kv/LoginScreen.kv
@@ -45,7 +45,7 @@
 #                pos_hint: {'center_x': .4, 'center_y': .5}
             MDLabel:
                 id: label
-                text: 'Remember me next time log in'
+                text: 'Comply with the agreement not to engage in illegal activities'
                 font_size: dp(10)
                 color: '#CFD8DC'
                 halign: 'center'
