--- a/source/kv/PostScreen.kv
+++ b/source/kv/PostScreen.kv
@@ -19,7 +19,6 @@
 ##            on_release: root.reply()
 
         MDLabel:
-            id: commentUserName
             text: root.commentUserName
             adaptive_size: True
             color: "black"
@@ -29,7 +28,6 @@
             font_size: 30
 
         MDLabel:
-            id: commentContent
             text: root.commentContent
             adaptive_size: True
             color: "grey"
@@ -48,7 +46,11 @@
 #    padding: 0, 0, 0, "16dp"
 
     MDRelativeLayout:
-
+        orientation: "vertical"
+        adaptive_height: True
+        spacing: "6dp"
+        padding: "12dp", 0, 0, 0
+        pos_hint: {"center_y": .5}
 #        MDIconButton:
 #            id: root.uuid
 #            icon: "chevron-right"
@@ -56,22 +58,16 @@
 #            on_release: root.jump('postPage',[root.uuid])
 
         MDLabel:
-            id: title
-            text: root.title
-            adaptive_size: True
+            text: root.postTitle
             color: "black"
-            pos: dp(5), dp(60)
-            bold: True
+            pos: dp(5), dp(35)
             font_style: 'H6'
             font_size: 35
 
         MDLabel:
-            id: content
-            text: root.content
-            adaptive_size: True
+            text: root.postContent
             color: "grey"
-            pos: dp(12), dp(12)
-            bold: True
+            pos: dp(12), dp(0)
             font_style: 'Body1'
             font_size: 20
             # Automatic line wrapping
@@ -83,7 +79,7 @@
 
 
     RecycleView:
-        scroll_y: 0.5
+#        scroll_y: 0.5
         pos_hint: {"center_x": .5, "center_y": .4}
         Column:
             id: postAndComment
@@ -106,7 +102,7 @@
         helper_text_mode: "on_focus"
         pos_hint: {'center_x': .45, 'center_y': 0.05}
         size_hint_x: .8
-        max_text_length: 35
+        max_text_length: 135
         background_color: '#6da0f2'
     MDIconButton:
         icon: 'arrow-top-right'
