--- a/source/kv/FileSelectScreen.kv
+++ b/source/kv/FileSelectScreen.kv
@@ -9,7 +9,7 @@
 
             ### Set file type filter
             file_types: ['png', 'jpg', 'jpeg']
-
+#            preview: True
             ### Set item selection callback
             on_item_press: root.show_selected()
 
