--- a/source/kv/PostScreen.kv
+++ b/source/kv/PostScreen.kv
@@ -63,6 +63,7 @@
             pos: dp(5), dp(35)
             font_style: 'H6'
             font_size: 35
+#            size_hint_x: 0.60
 
         MDLabel:
             text: root.postContent
@@ -74,6 +75,7 @@
             text_size: self.width, None
             size_hint: 1, None
             height: self.texture_size[1]
+#            size_hint_x: 0.60
 
 
 <PostScreen>:
