fix: minor fix for login screen & register screen

--- a/source/kv/LoginScreen.kv
+++ b/source/kv/LoginScreen.kv
@@ -45,7 +45,7 @@
 #                pos_hint: {'center_x': .4, 'center_y': .5}
             MDLabel:
                 id: label
-                text: 'Comply with the agreement not to engage in illegal activities'
+                text: 'I agree to the terms and conditions and the privacy policy'
                 font_size: dp(10)
                 color: '#CFD8DC'
                 halign: 'center'
@@ -57,7 +57,7 @@
             spacing: dp(20)
 
             MDRaisedButton:
-                text: "Login"
+                text: "Sign in"
                 md_bg_color: "#42A5F5"
                 pos_hint: {'left': 1}
                 size_hint: (0.4,1)
