--- a/source/kv/RegisterScreen.kv
+++ b/source/kv/RegisterScreen.kv
@@ -18,7 +18,7 @@
         halign: 'center'
         valign: 'center'
         padding: dp(100)
-        spacing: dp(20)
+    #    spacing: dp(20)
 
 
         MDLabel:
@@ -61,7 +61,7 @@
 #                pos_hint: {'center_x': .4, 'center_y': .5}
             MDLabel:
                 id: is_follow_register_rule
-                text: 'Comply with community unfair registration principles'
+                text: 'I agree to the terms and conditions and the privacy policy'
                 font_size: dp(10)
                 color: '#CFD8DC'
                 halign: 'center'
