--- a/source/kv/SearchScreen.kv
+++ b/source/kv/SearchScreen.kv
@@ -13,7 +13,7 @@
             pos_hint: {"top": 1, "right": 1}
             on_release: root.jump(root.searchUuid)
 
-        MDLabel:
+        SearchMDLabel:
             text: root.searchTitle
             adaptive_size: True
             color: "black"
@@ -22,7 +22,7 @@
             font_style: 'H6'
             font_size: 35
 
-        MDLabel:
+        SearchMDLabel:
             text: root.searchContent
             adaptive_size: True
             color: "grey"
@@ -72,7 +72,7 @@
                     pos:  - self.width*2- dp(8), 0
                     theme_text_color: "Hint"
                     on_release: app.go_back()
-                MDTextField:
+                SearchMDTextField:
                     id: searchTextField
                     hint_text: "Enter keyword"
                     hint_text_color_normal: 1,1,1,.5
@@ -89,3 +89,9 @@
                     pos: searchTextField.width - self.width + dp(8), 0
                     theme_text_color: "Hint"
                     on_release: root.search()
+
+<SearchMDLabel@MDLabel>
+    font_name: 'myFort'
+
+<SearchMDTextField@MDTextField>
+    font_name: 'myFort'
