--- a/source/kv/ForumMainScreen.kv
+++ b/source/kv/ForumMainScreen.kv
@@ -50,11 +50,13 @@
                 pos: self.pos
     RecycleView:
         scroll_y: 0.5
-        pos_hint: {"center_x": .5, "center_y": .2}
+        pos_hint: {"center_x": .5, "center_y": .35}
+        size_hint_y: .70
         Column:
             id: listOfPost
             adaptive_height: True
             spacing: "16dp"
+
             ### An async image widget contains an image
             ### The image is displayed with specific width and height (300 x 900)
 
