fix: minor fix for login screen

--- a/source/kv/LoginScreen.kv
+++ b/source/kv/LoginScreen.kv
@@ -44,7 +44,7 @@
 #                pos_hint: {'center_x': .4, 'center_y': .5}
             LoginMDLabel:
                 id: label
-                text: 'I agree to the terms and conditions and the privacy policy'
+                text: 'I agree to the Terms and Conditions and Privacy Policy'
                 font_size: dp(10)
                 color: '#CFD8DC'
                 halign: 'center'
