feat: add entry for user profile page

--- a/source/kv/ForumMainScreen.kv
+++ b/source/kv/ForumMainScreen.kv
@@ -82,5 +82,5 @@
                 ]
 
 <ForumMainMDLabel@MDLabel>
-    font_name: 'myFort'
+    font_name: 'myFont'
     text_color: 0,0.058,0.101,1
