--- a/source/kv/LoginScreen.kv
+++ b/source/kv/LoginScreen.kv
@@ -93,7 +93,7 @@
     line_color_focus: 1,1,1,1
     text_color_normal: 1,1,1,.7
     text_color_focus: 1,1,1,1
-    font_name: 'myFort'
+    font_name: 'myFont'
 
 <Check@MDCheckbox>:
     group: 'group'
@@ -101,4 +101,4 @@
     size: dp(48), dp(48)
 
 <LoginMDLabel@MDLabel>
-    font_name: 'myFort'
+    font_name: 'myFont'
