--- a/source/kv/PostScreen.kv
+++ b/source/kv/PostScreen.kv
@@ -118,7 +118,7 @@
 #                pos_hint: {'center_x': .5, 'center_y': 0.15}
 
 <PostMDLabel@MDLabel>
-    font_name: 'myFort'
+    font_name: 'myFont'
 
 <PostMDTextField@MDTextField>
-    font_name: 'myFort'
+    font_name: 'myFont'
