--- a/source/kv/RegisterScreen.kv
+++ b/source/kv/RegisterScreen.kv
@@ -103,10 +103,10 @@
     line_color_focus: 1,1,1,1
     text_color_normal: 1,1,1,.7
     text_color_focus: 1,1,1,1
-    font_name: 'myFort'
+    font_name: 'myFont'
 
 <RegisterMDLabel@MDLabel>
-    font_name: 'myFort'
+    font_name: 'myFont'
 
 <Check@MDCheckbox>:
     group: 'group'
