--- a/source/kv/SearchScreen.kv
+++ b/source/kv/SearchScreen.kv
@@ -91,7 +91,7 @@
                     on_release: root.search()
 
 <SearchMDLabel@MDLabel>
-    font_name: 'myFort'
+    font_name: 'myFont'
 
 <SearchMDTextField@MDTextField>
-    font_name: 'myFort'
+    font_name: 'myFont'
