--- a/source/kv/CreatePostScreen.kv
+++ b/source/kv/CreatePostScreen.kv
@@ -74,7 +74,7 @@
     line_color_focus: 1,1,1,1
     text_color_normal: 0,0,0.0,.7
     text_color_focus: 0,0,0.0,1
-    font_name: 'myFort'
+    font_name: 'myFont'
 
 <CreateMDLabel@MDLabel>
-    font_name: 'myFort'
+    font_name: 'myFont'
