--- a/source/kv/PostScreen.kv
+++ b/source/kv/PostScreen.kv
@@ -24,8 +24,8 @@
             color: "black"
             pos: dp(5), dp(40)
             bold: True
-            font_style: 'H6'
-            font_size: 30
+#            font_style: 'H6'
+            font_size: 25
 
         PostMDLabel:
             text: root.commentContent
@@ -33,7 +33,7 @@
             color: "grey"
             pos: dp(12), dp(12)
             bold: True
-            font_style: 'Body1'
+#            font_style: 'Body1'
             font_size: 15
             # Automatic line wrapping
             text_size: self.width, None
@@ -62,7 +62,7 @@
             text: root.postTitle
             color: "black"
             pos: dp(5), dp(35)
-            font_style: 'H6'
+#            font_style: 'H6'
             font_size: 35
 #            size_hint_x: 0.60
 
@@ -70,8 +70,8 @@
             text: root.postContent
             color: "grey"
             pos: dp(12), dp(0)
-            font_style: 'Body1'
-            font_size: 20
+#            font_style: 'Body1'
+            font_size: 15
             # Automatic line wrapping
             text_size: self.width, None
             size_hint: 1, None
