--- a/source/kv/ForumMainScreen.kv
+++ b/source/kv/ForumMainScreen.kv
@@ -20,7 +20,7 @@
             color: "black"
             pos: dp(5), dp(60)
             bold: True
-            font_style: 'H6'
+#            font_style: 'H6'
             font_size: 35
 
         ForumMainMDLabel:
@@ -30,7 +30,7 @@
             color: "grey"
             pos: dp(12), dp(12)
             bold: True
-            font_style: 'Body1'
+#            font_style: 'Body1'
             font_size: 20
 
 
