--- a/source/kv/MyPostScreen.kv
+++ b/source/kv/MyPostScreen.kv
@@ -25,7 +25,6 @@
             color: "black"
             pos: dp(5), dp(60)
             bold: True
-            font_style: 'H6'
             font_size: 35
 
         MyPostMDLabel:
@@ -34,7 +33,7 @@
             color: "grey"
             pos: dp(12), dp(12)
             bold: True
-            font_style: 'Body1'
+#            font_style: 'Body1'
             font_size: 20
 <MyPostScreen>:
     RecycleView:
