--- a/source/kv/ProfileScreen.kv
+++ b/source/kv/ProfileScreen.kv
@@ -5,3 +5,48 @@
         MDTopAppBar:
             id: toolbar
             left_action_items: [['chevron-left', lambda x: app.go_back()]]
+
+    MDLabel:
+        text: "My Profile"
+        font_size: "25sp"
+        pos_hint: {"center_x": .6, "center_y": .85}
+
+    MDFloatLayout:
+        size_hint_x: .2
+        size_hint_y: .2
+        pos_hint: {"center_x": .5, "center_y": .72}
+        canvas:
+            Color:
+                rgb: (1, 1, 1, 1)
+            Ellipse:
+                size: 240, 240
+                pos: self.pos
+                source: "source/pic/avatar_test.png"
+
+    MDLabel:
+        id: userName
+        text: ''
+        font_name: 'myFont'
+        font_size: 40
+        pos_hint: {"center_x": .7, "center_y": .5}
+
+    MDLabel:
+        id: userNickName
+        text: ''
+        font_name: 'myFont'
+        font_size: 40
+        pos_hint: {"center_x": .7, "center_y": .44}
+
+    MDLabel:
+        id: userPhoneNumber
+        text: ''
+        font_name: 'myFont'
+        font_size: 40
+        pos_hint: {"center_x": .7, "center_y": .38}
+
+    MDLabel:
+        id: userEmail
+        text: ''
+        font_name: 'myFont'
+        font_size: 40
+        pos_hint: {"center_x": .7, "center_y": .32}
