--- a/source/kv/EditProfileScreen.kv
+++ b/source/kv/EditProfileScreen.kv
@@ -1,5 +1,5 @@
-<ProfileScreen>
-    name: 'ProfileScreen'
+<EditProfileScreen>
+    name: 'EditProfileScreen'
 
     Column:
         MDTopAppBar:
@@ -7,7 +7,7 @@
             left_action_items: [['chevron-left', lambda x: app.go_back()]]
 
     MDLabel:
-        text: "My Profile"
+        text: "Edit Profile"
         font_size: "25sp"
         pos_hint: {"center_x": .6, "center_y": .85}
 
@@ -23,37 +23,40 @@
                 pos: self.pos
                 source: "source/pic/avatar_test.png"
 
-    MDLabel:
+    MDTextField:
         id: userName
         text: ''
+        hint_text: 'New Username'
         font_name: 'myFont'
         font_size: 40
         pos_hint: {"center_x": .7, "center_y": .5}
 
-    MDLabel:
+    MDTextField:
         id: userNickName
         text: ''
+        hint_text: 'New Nickname'
         font_name: 'myFont'
         font_size: 40
-        pos_hint: {"center_x": .7, "center_y": .44}
+        pos_hint: {"center_x": .7, "center_y": .42}
 
-    MDLabel:
+    MDTextField:
         id: userPhoneNumber
         text: ''
+        hint_text: 'New Phone Number'
         font_name: 'myFont'
         font_size: 40
-        pos_hint: {"center_x": .7, "center_y": .38}
+        pos_hint: {"center_x": .7, "center_y": .34}
 
-    MDLabel:
+    MDTextField:
         id: userEmail
         text: ''
+        hint_text: 'New Email'
         font_name: 'myFont'
         font_size: 40
-        pos_hint: {"center_x": .7, "center_y": .32}
+        pos_hint: {"center_x": .7, "center_y": .26}
 
     MDRaisedButton:
-        text: "Edit"
+        text: "Save"
         md_bg_color: "#42A5F5"
-        pos_hint: {"center_x": .5, "center_y": .23}
+        pos_hint: {"center_x": .5, "center_y": .16}
         size_hint: (0.1, 0.06)
-        on_press: root.jumpToUpdate()
