style: new variable names for profile page

--- a/source/kv/EditProfileScreen.kv
+++ b/source/kv/EditProfileScreen.kv
@@ -24,7 +24,7 @@
                 source: "source/pic/avatar_test.png"
 
     MDTextField:
-        id: userName
+        id: user_name_field
         text: ''
         hint_text: 'New Username'
         font_name: 'myFont'
@@ -32,7 +32,7 @@
         pos_hint: {"center_x": .7, "center_y": .5}
 
     MDTextField:
-        id: userNickName
+        id: user_nick_name_field
         text: ''
         hint_text: 'New Nickname'
         font_name: 'myFont'
@@ -40,7 +40,7 @@
         pos_hint: {"center_x": .7, "center_y": .42}
 
     MDTextField:
-        id: userPhoneNumber
+        id: user_phone_number_field
         text: ''
         hint_text: 'New Phone Number'
         font_name: 'myFont'
@@ -48,7 +48,7 @@
         pos_hint: {"center_x": .7, "center_y": .34}
 
     MDTextField:
-        id: userEmail
+        id: user_email_field
         text: ''
         hint_text: 'New Email'
         font_name: 'myFont'
