feat: complete edit profile page

--- a/source/kv/EditProfileScreen.kv
+++ b/source/kv/EditProfileScreen.kv
@@ -60,3 +60,4 @@
         md_bg_color: "#42A5F5"
         pos_hint: {"center_x": .5, "center_y": .16}
         size_hint: (0.1, 0.06)
+        on_press: root.updateProfile()
