feat: change password page

--- a/source/kv/ChangePasswordScreen.kv
+++ b/source/kv/ChangePasswordScreen.kv
@@ -1,5 +1,5 @@
-<EditProfileScreen>
-    name: 'EditProfileScreen'
+<ChangePasswordScreen>
+    name: 'ChangePasswordScreen'
 
     Column:
         MDTopAppBar:
@@ -7,7 +7,7 @@
             left_action_items: [['chevron-left', lambda x: app.go_back()]]
 
     MDLabel:
-        text: "Edit Profile"
+        text: "Change Password"
         font_size: "25sp"
         pos_hint: {"center_x": .6, "center_y": .85}
 
@@ -24,40 +24,37 @@
                 source: "source/pic/avatar_test.png"
 
     MDTextField:
-        id: user_name_field
+        id: old_password_field
         text: ''
-        hint_text: 'New Username'
+        hint_text: 'Old Password'
+        password: True
         font_name: 'myFont'
         font_size: 40
         pos_hint: {"center_x": .7, "center_y": .5}
 
     MDTextField:
-        id: user_nick_name_field
+        id: new_password_field
         text: ''
-        hint_text: 'New Nickname'
+        hint_text: 'New Password'
+        password: True
+        helper_text: 'Note: At least 8 characters'
+        helper_text_mode: "on_focus"
         font_name: 'myFont'
         font_size: 40
         pos_hint: {"center_x": .7, "center_y": .42}
 
     MDTextField:
-        id: user_phone_number_field
+        id: re_new_password_field
         text: ''
-        hint_text: 'New Phone Number'
+        hint_text: 'Re-enter New Password'
+        password: True
         font_name: 'myFont'
         font_size: 40
         pos_hint: {"center_x": .7, "center_y": .34}
 
-    MDTextField:
-        id: user_email_field
-        text: ''
-        hint_text: 'New Email'
-        font_name: 'myFont'
-        font_size: 40
-        pos_hint: {"center_x": .7, "center_y": .26}
-
     MDRaisedButton:
         text: "Save"
         md_bg_color: "#42A5F5"
-        pos_hint: {"center_x": .5, "center_y": .16}
+        pos_hint: {"center_x": .5, "center_y": .25}
         size_hint: (0.1, 0.06)
-        on_press: root.updateProfile()
+        on_press: root.updatePassword()
