--- a/source/kv/RegisterScreen.kv
+++ b/source/kv/RegisterScreen.kv
@@ -41,7 +41,7 @@
             id: password_field
             hint_text: 'Password'
             password: True
-            helper_text: 'Note: At least 6 characters long but 14 or more.'
+            helper_text: 'Note: At least 8 characters'
             helper_text_mode: "on_focus"
 
         RegisterTextField:
