--- a/source/kv/ProfileScreen.kv
+++ b/source/kv/ProfileScreen.kv
@@ -14,7 +14,7 @@
     MDFloatLayout:
         size_hint_x: .2
         size_hint_y: .2
-        pos_hint: {"center_x": .5, "center_y": .72}
+        pos_hint: {"center_x": .45, "center_y": .72}
         canvas:
             Color:
                 rgb: (1, 1, 1, 1)
@@ -57,3 +57,10 @@
         pos_hint: {"center_x": .5, "center_y": .23}
         size_hint: (0.1, 0.06)
         on_press: root.jumpToEdit()
+
+    MDRaisedButton:
+        text: "Change password"
+        md_bg_color: "#42A5F5"
+        pos_hint: {"center_x": .5, "center_y": .14}
+        size_hint: (0.1, 0.06)
+        on_press: root.jumpToChangePassword()
